--- a/app/src/main/res/layout/command_match_fragment.xml
+++ b/app/src/main/res/layout/command_match_fragment.xml
@@ -60,8 +60,8 @@
                         android:text="TextView"
                         android:textColor="@color/colorPurpleDark"
                         android:textSize="28sp"
-                        app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
 
@@ -74,22 +74,51 @@
                         android:text="Date:"
                         android:textColor="@color/colorPurpleDark"
                         android:textSize="20sp"
-                        app:layout_constraintStart_toStartOf="@id/tv_city"
                         app:layout_constraintEnd_toEndOf="@id/tv_city"
+                        app:layout_constraintStart_toStartOf="@id/tv_city"
                         app:layout_constraintTop_toBottomOf="@id/tv_city" />
 
                     <TextView
-                        android:id="@+id/tv_number_participant"
+                        android:id="@+id/tv_team1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:fontFamily="@font/varela_round"
+                        android:text="Team"
+                        android:textColor="@color/colorPurpleDark"
+                        android:textSize="28sp"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toStartOf="@+id/tv_separator"
+                        app:layout_constraintTop_toTopOf="@id/tv_separator" />
+
+                    <TextView
+                        android:id="@+id/tv_separator"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:fontFamily="@font/varela_round"
-                        android:text="Participant:"
+                        android:text="-"
                         android:textColor="@color/colorPurpleDark"
-                        android:textSize="20sp"
-                        app:layout_constraintStart_toStartOf="@id/tv_date"
-                        app:layout_constraintEnd_toEndOf="@id/tv_date"
+                        android:textSize="28sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.5"
+                        app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/tv_date" />
+
+
+                    <TextView
+                        android:id="@+id/tv_team2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:fontFamily="@font/varela_round"
+                        android:text="Team"
+                        android:textColor="@color/colorPurpleDark"
+                        android:textSize="28sp"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="@id/tv_separator"
+                        app:layout_constraintStart_toEndOf="@+id/tv_separator"
+                        app:layout_constraintTop_toTopOf="@id/tv_separator" />
 
                     <Button
                         android:id="@+id/btn_apply"
@@ -105,10 +134,10 @@
                         android:textAllCaps="true"
                         android:textColor="@color/colorPurpleDark"
                         android:textSize="14sp"
-                        android:visibility="invisible"
+                        android:visibility="gone"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/tv_number_participant" />
+                        app:layout_constraintTop_toBottomOf="@+id/tv_separator" />
 
                     <Button
                         android:id="@+id/btn_end"
@@ -124,38 +153,18 @@
                         android:textAllCaps="true"
                         android:textColor="@color/colorPurpleDark"
                         android:textSize="14sp"
-                        android:visibility="invisible"
+                        android:visibility="gone"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/tv_number_participant" />
+                        app:layout_constraintTop_toBottomOf="@+id/tv_separator" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.cardview.widget.CardView>
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
-        ​
-        ​
-
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tabs"
-            android:layout_width="fill_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorWhite"
-            app:tabIndicatorColor="@color/colorPink"
-            app:tabIndicatorHeight="4dp"
-            app:tabSelectedTextColor="@color/colorPurpleDark"
-            app:tabTextColor="@color/colorGray" />
     </com.google.android.material.appbar.AppBarLayout>
     ​
-
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="16dp"
-        android:background="@null"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <com.comix.overwatch.HiveProgressView
         android:id="@+id/progress_bar"
@@ -168,6 +177,32 @@
         app:hive_cornerRadius="20"
         app:hive_maxAlpha="255"
         app:hive_shrink="true" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="16dp"
+        android:background="@null"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorWhite">
+
+            <TextView
+                android:id="@+id/tv_description"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fontFamily="@font/varela_round"
+                android:text=""
+                android:textColor="@color/colorPurpleDark"
+                android:textSize="20sp"
+                android:layout_marginStart="12dp"
+                android:layout_marginEnd="12dp"/>
+        </LinearLayout>
+
+    </ScrollView>
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
