--- a/app/src/main/res/layout/command_match_template.xml
+++ b/app/src/main/res/layout/command_match_template.xml
@@ -37,7 +37,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="7dp"
         android:fontFamily="@font/varela_round"
-        android:text="Team 1"
+        android:text="Team"
         android:textColor="@color/colorPurpleDark"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -67,7 +67,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="7dp"
         android:fontFamily="@font/varela_round"
-        android:text="Team 2"
+        android:text="Team"
         android:textColor="@color/colorPurpleDark"
         android:textSize="18sp"
         android:textStyle="bold"
