--- a/app/src/main/res/layout/player_template.xml
+++ b/app/src/main/res/layout/player_template.xml
@@ -51,7 +51,7 @@
         android:textColor="@color/colorPurpleDark"
         android:textSize="16sp"
         android:layout_marginBottom="4dp"
-        app:layout_constraintBottom_toTopOf="@id/tv_notif"
+        app:layout_constraintBottom_toTopOf="@id/view"
         app:layout_constraintStart_toStartOf="@id/tv_firstName"
         app:layout_constraintTop_toBottomOf="@+id/tv_firstName" />
 
