--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -45,7 +45,6 @@
                 android:layout_marginStart="36dp"
                 android:layout_marginTop="28dp"
                 android:fontFamily="@font/varela_round"
-                android:text="TextView"
                 android:textColor="@color/colorPurpleDark"
                 android:textSize="28sp"
                 app:layout_constraintStart_toEndOf="@+id/imageView"
@@ -58,8 +57,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/varela_round"
-                android:text="Club"
-                android:textColor="@color/colorPurpleDark"
+                android:textColor="@color/colorPink"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@+id/tv_user_login"
                 app:layout_constraintTop_toBottomOf="@id/tv_user_login" />
@@ -68,103 +66,6 @@
 
     </androidx.cardview.widget.CardView>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cv_user_raiting"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:backgroundTint="@color/colorWhite"
-        app:cardCornerRadius="0in"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cv_main_data">
-
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/cl_user_raiting"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-
-            <TextView
-                android:id="@+id/tv_points"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="4"
-                android:textColor="@color/colorPurpleDark"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="@id/pb_raiting"
-                app:layout_constraintEnd_toEndOf="@+id/pb_raiting"
-                app:layout_constraintStart_toStartOf="@+id/pb_raiting"
-                app:layout_constraintTop_toTopOf="@id/pb_raiting" />
-
-            <ProgressBar
-                android:id="@+id/pb_raiting"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="16dp"
-                android:background="@drawable/circle_shape"
-                android:fontFamily="@font/varela_round"
-                android:indeterminate="false"
-                android:max="5"
-                android:progress="4"
-                android:progressDrawable="@drawable/circular_progress_bar"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/tv_raiting"
-                app:layout_constraintHorizontal_bias="0.466"
-                app:layout_constraintStart_toStartOf="@+id/tv_raiting"
-                app:layout_constraintTop_toBottomOf="@+id/tv_raiting"
-                app:layout_constraintVertical_bias="1.0" />
-
-            <TextView
-                android:id="@+id/tv_raiting"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="28dp"
-                android:layout_marginTop="16dp"
-                android:fontFamily="@font/varela_round"
-                android:text="Player raiting"
-                android:textColor="@color/colorPurpleDark"
-                android:textSize="16sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/tv_cur_voices"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="28dp"
-                android:layout_marginTop="16dp"
-                android:fontFamily="@font/varela_round"
-                android:text="Number of raitings"
-                android:textColor="@color/colorPurpleDark"
-                android:textSize="16sp"
-                app:layout_constraintStart_toEndOf="@id/tv_raiting"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/tv_cur_voices_points"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/varela_round"
-                android:text="12"
-                android:textColor="@color/colorPurpleDark"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="@id/pb_raiting"
-                app:layout_constraintEnd_toEndOf="@+id/tv_cur_voices"
-                app:layout_constraintStart_toStartOf="@+id/tv_cur_voices"
-                app:layout_constraintTop_toTopOf="@id/pb_raiting" />
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_user_detail_info"
@@ -173,7 +74,7 @@
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cv_user_raiting">
+        app:layout_constraintTop_toBottomOf="@id/cv_main_data">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -202,9 +103,6 @@
                         android:layout_marginEnd="8dp"
                         android:layout_marginBottom="4dp"
                         android:fontFamily="@font/varela_round"
-                        android:lineSpacingExtra="24sp"
-                        android:text="firstName"
-                        android:textAllCaps="false"
                         android:textAppearance="@style/TextAppearance.AppCompat.Large"
                         android:textColor="@color/colorPurpleDark"
                         android:textSize="20sp"
@@ -261,7 +159,6 @@
                         android:layout_marginEnd="8dp"
                         android:layout_marginBottom="4dp"
                         android:fontFamily="@font/varela_round"
-                        android:text="secondName"
                         android:textColor="@color/colorPurpleDark"
                         android:textSize="20sp"
                         android:textStyle="bold"
@@ -317,7 +214,6 @@
                         android:layout_marginEnd="8dp"
                         android:layout_marginBottom="4dp"
                         android:fontFamily="@font/varela_round"
-                        android:text="gender"
                         android:textColor="@color/colorPurpleDark"
                         android:textSize="20sp"
                         android:textStyle="bold"
@@ -375,7 +271,6 @@
                         android:layout_marginEnd="8dp"
                         android:layout_marginBottom="4dp"
                         android:fontFamily="@font/varela_round"
-                        android:text="city"
                         android:textColor="@color/colorPurpleDark"
                         android:textSize="20sp"
                         android:textStyle="bold"
