--- a/app/src/main/res/layout/command_match_fragment.xml
+++ b/app/src/main/res/layout/command_match_fragment.xml
@@ -78,6 +78,19 @@
                         app:layout_constraintTop_toBottomOf="@id/tv_city" />
 
                     <TextView
+                        android:id="@+id/tv_time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:fontFamily="@font/varela_round"
+                        android:text="Time:"
+                        android:textColor="@color/colorPurpleDark"
+                        android:textSize="20sp"
+                        app:layout_constraintEnd_toEndOf="@id/tv_date"
+                        app:layout_constraintStart_toStartOf="@id/tv_date"
+                        app:layout_constraintTop_toBottomOf="@id/tv_date" />
+
+                    <TextView
                         android:id="@+id/tv_team1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -101,7 +114,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.5"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/tv_date" />
+                        app:layout_constraintTop_toBottomOf="@id/tv_time" />
 
 
                     <TextView
