--- a/app/src/main/res/layout/single_match_fragment.xml
+++ b/app/src/main/res/layout/single_match_fragment.xml
@@ -79,6 +79,19 @@
                         app:layout_constraintTop_toBottomOf="@id/tv_city" />
 
                     <TextView
+                        android:id="@+id/tv_time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:fontFamily="@font/varela_round"
+                        android:text="Time:"
+                        android:textColor="@color/colorPurpleDark"
+                        android:textSize="20sp"
+                        app:layout_constraintEnd_toEndOf="@id/tv_date"
+                        app:layout_constraintStart_toStartOf="@id/tv_date"
+                        app:layout_constraintTop_toBottomOf="@id/tv_date" />
+
+                    <TextView
                         android:id="@+id/tv_number_participant"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -87,9 +100,9 @@
                         android:text="Participant:"
                         android:textColor="@color/colorPurpleDark"
                         android:textSize="20sp"
-                        app:layout_constraintEnd_toEndOf="@id/tv_date"
-                        app:layout_constraintStart_toStartOf="@id/tv_date"
-                        app:layout_constraintTop_toBottomOf="@id/tv_date" />
+                        app:layout_constraintEnd_toEndOf="@id/tv_time"
+                        app:layout_constraintStart_toStartOf="@id/tv_time"
+                        app:layout_constraintTop_toBottomOf="@id/tv_time" />
 
                     <Button
                         android:id="@+id/btn_apply"
